CSS/app.css
body {
  background-color: #2c3e50;
  margin-bottom: 60px;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
/*  font-weight: bold; 
*/  color: white;

}
  
  h1 {
  /*text-align: center;*/
  /*margin-left:300px;*/
  margin-top: 5px;
  margin-bottom: 0px;
  position: relative;
  font-color: bold;
  font-size: 50px;
  text-align: center;
}
.container {
  width: 1000px;
  height: 600px;
  margin-left: 200px;
  border: 1px;
  border-color: black;
  text-align: center;
  /*font-weight: bold;*/ 
  font-color: white;
}

p {
  text-align: center;
  margin-top: 5px;
  margin-bottom: 0px;
}
#winner{
  width: 100px;
  height: 30px;
  list-style: none;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  line-height: 30px; 
  font-size: 20px;
  /*position: relative;*/
  background-color: white;
  color: #d35400;
  border-color: #d35400;
  border: 3px solid;
  margin-right: 70px;
  margin-top: 0px;
}

#refresh {
  width: 100px;
  height: 30px;
  list-style: none;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  opacity: 9;
  line-height: 30px; 
  font-size: 20px;
  /*position: relative;*/
  background-color: white;
  color: #d35400;
  border-color: #d35400;
  border: 3px solid;
  margin-right: 25px;
  margin-top: 0px;
}

 #lives{
  width: 100px;
  height: 30px;
  list-style: none;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  opacity: 9;
  line-height: 30px; 
  font-size: 20px;
  /*position: relative;*/
  background-color: white;
  color: #d35400;
  border-color: #d35400;
  border: 3px solid;
  margin-right: 50px;
  margin-top: 0px;
}
.hang10{
 width:290px;
 height:387px;
 background-color:white;
 display: inline-block;
 background-image: url("../images/IMG_00.JPG");
 background-repeat: no-repeat;
 background-size: contain;
 margin-left: 50px;
 border: 5px solid;
 border-color: #d35400;
 margin-bottom: 0px;
 margin-top: 0px;
}

.answerTile {
  width: 50px;
  height: 50px;
  list-style: none;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  opacity: 9;
  line-height: 50px; 
  font-size: 20px;
  /*position: relative;*/
  background-color: white;
  color: #d35400;
  border-color: #d35400;
  border: 3px solid;
  margin-left: 1px;
  margin-bottom: 1px;
  margin-top: 1px;
}

.tile {
  width: 50px;
  height: 50px;
  list-style: none;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  opacity: 9;
  line-height: 50px; 
  font-size: 20px;
  /*position: relative;*/
  background-color: #2c3e50;
  color: #d35400;
  border-color: #d35400;
  border: 3px solid;
  margin-left: 1px;
  margin-top: 0 px;
}

#space1 {
  width: 50px;
  height: 50px;
  list-style: none;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
  opacity: 9;
  line-height: 50px; 
  font-size: 20px;
  /*position: relative;*/
  background-color: #2c3e50;
  color: #d35400;
  border-color: #d35400;
  border: 3px solid;
  margin-left: 40px;
  margin-top: 0px;
}
.tile:hover {
 background-color: #34495e;
 border-color: #d35400;
 color: #d35400; }
}

.space1:hover {
 background-color: #34495e;
 border-color: #d35400;
 color: #d35400; }
}

